src/tui/snapshots/agentdiff__tui__tests__renders_empty_review_layout.snap
---
source: src/tui/mod.rs
expression: render_to_string(&state)
---
"┌ Files ─────────────┐┌ Diff — working tree vs HEAD (0 fi┐┌ Intent ────────────┐"
"│(no changes)        ││       No changes to review.      ││no agent session    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││(no recorded intent │"
"│                    ││                                  ││for this file)      │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"└────────────────────┘└──────────────────────────────────┘└────────────────────┘"
" agentdiff   working tree   reviewed 0/0    a approve  x flag  n note  ? help  q"
