src/tui/snapshots/agentdiff__tui__tests__renders_flag_badge_and_match_count.snap
---
source: src/tui/mod.rs
expression: render_to_string(&state)
---
"┌ Files ─────────────┐┌ Diff — working tree vs HEAD (1 fi┐┌ Intent ────────────┐"
"│▾ M src/main.rs  +1 ││▾ M src/main.rs  +1 -1            ││no agent session    │"
"│                    ││✗ @@ -1,2 +1,2 @@ fn main()       ││                    │"
"│                    ││  1   fn main() {                 ││src/main.rs         │"
"│                    ││  2 -     let x = 1;              ││(no recorded intent │"
"│                    ││  2 +     let x = 2;              ││for this file)      │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"└────────────────────┘└──────────────────────────────────┘└────────────────────┘"
" agentdiff   working tree   reviewed 1/1  ✗ 1  /let 2 matches m/M    a approve  "
