src/tui/snapshots/agentdiff__tui__tests__renders_help_overlay.snap
---
source: src/tui/mod.rs
expression: render_to_string(&state)
---
"┌ Files ─────────┌ Help ──────────────────────────────────────┐ent ────────────┐"
"│▾ M src/main.rs │agentdiff — keys                            │gent session    │"
"│                │                                            │                │"
"│                │  j / k        line down / up               │main.rs         │"
"│                │  C-d / C-u    half page down / up          │recorded intent │"
"│                │  ]c / [c      next / prev hunk             │this file)      │"
"│                │  } / {        next / prev file             │                │"
"│                │  gg / G       top / bottom                 │                │"
"│                │  Space        collapse / expand file       │                │"
"│                │                                            │                │"
"│                │  a            approve hunk                 │                │"
"│                │  x            flag (needs attention)       │                │"
"│                │  u            clear verdict                │                │"
"│                │                                            │                │"
"│                │  s            session picker               │                │"
"│                │  i            toggle intent detail         │                │"
"│                │                                            │                │"
"│                │  ?            toggle this help             │                │"
"└────────────────│  Esc          close overlay                │────────────────┘"
" agentdiff   revi└────────────────────────────────────────────┘uit              "
