src/tui/snapshots/agentdiff__tui__tests__renders_intent_panel.snap
---
source: src/tui/mod.rs
expression: render_to_string(&state)
---
"┌ Files ─────────────┐┌ Diff — working tree vs HEAD (1 fi┐┌ Intent ────────────┐"
"│▾ M src/main.rs  +1 ││▾ M src/main.rs  +1 -1            ││Add greeting, fix   │"
"│                    ││  @@ -1,2 +1,2 @@ fn main()       ││off-by-one          │"
"│                    ││  1   fn main() {                 ││Claude Code  agent  │"
"│                    ││  2 -     let x = 1;              ││run 1/1             │"
"│                    ││  2 +     let x = 2;              ││(acceptEdits)  ●    │"
"│                    ││                                  ││live                │"
"│                    ││                                  ││VERIFY ✓ test  ✗    │"
"│                    ││                                  ││lint                │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││src/main.rs         │"
"│                    ││                                  ││WHY ●●●●● 90% ·     │"
"│                    ││                                  ││whole file          │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││Bump the constant so│"
"│                    ││                                  ││the example reflects│"
"│                    ││                                  ││the new default.    │"
"│                    ││                                  ││                    │"
"└────────────────────┘└──────────────────────────────────┘└────────────────────┘"
" agentdiff   working tree ● live   reviewed 0/1    a approve  x flag  n note  ? "
