src/tui/snapshots/agentdiff__tui__tests__renders_note_editor.snap
---
source: src/tui/mod.rs
expression: render_to_string(&state)
---
"┌ Files ─────────────┐┌ Diff — working tree vs HEAD (1 fi┐┌ Intent ────────────┐"
"│▾ M src/main.rs  +1 ││▾ M src/main.rs  +1 -1            ││no agent session    │"
"│                    ││  @@ -1,2 +1,2 @@ fn main()       ││                    │"
"│                    ││  1   fn main() {                 ││src/main.rs         │"
"│                    ││  2 -     let x = 1;              ││(no recorded intent │"
"│                    ││  2 +     let x = 2;              ││for this file)      │"
"│                    ││                                  ││                    │"
"│       ┌ Note — src/main.rs ──────────────────────────────────────────┐       │"
"│       │double-check the off-by-one█                                  │       │"
"│       │                                                              │       │"
"│       │Enter: save    Esc: cancel                                    │       │"
"│       │                                                              │       │"
"│       │                                                              │       │"
"│       └──────────────────────────────────────────────────────────────┘       │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"└────────────────────┘└──────────────────────────────────┘└────────────────────┘"
" agentdiff   working tree   reviewed 0/1    a approve  x flag  n note  ? help  q"
