src/tui/snapshots/agentdiff__tui__tests__renders_search_prompt.snap
---
source: src/tui/mod.rs
expression: render_to_string(&state)
---
"┌ Files ─────────────┐┌ Diff — working tree vs HEAD (1 fi┐┌ Intent ────────────┐"
"│▾ M src/main.rs  +1 ││▾ M src/main.rs  +1 -1            ││no agent session    │"
"│                    ││  @@ -1,2 +1,2 @@ fn main()       ││                    │"
"│                    ││  1   fn main() {                 ││src/main.rs         │"
"│                    ││  2 -     let x = 1;              ││(no recorded intent │"
"│                    ││  2 +     let x = 2;              ││for this file)      │"
"│                    ││                                  ││                    │"
"│       ┌ Search ──────────────────────────────────────────────────────┐       │"
"│       │/let x█                                                       │       │"
"│       │                                                              │       │"
"│       │Enter: search    Esc: cancel    then m / M: next / prev match │       │"
"│       │                                                              │       │"
"│       │                                                              │       │"
"│       └──────────────────────────────────────────────────────────────┘       │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"│                    ││                                  ││                    │"
"└────────────────────┘└──────────────────────────────────┘└────────────────────┘"
" agentdiff   working tree   reviewed 0/1    a approve  x flag  n note  ? help  q"
